--- a/app/src/main/res/layout/layout_search_center.xml
+++ b/app/src/main/res/layout/layout_search_center.xml
@@ -3,17 +3,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/ListView">
-
+                android:id="@+id/search_list_view"
+                android:layout_weight="10">
             </ListView>
-
 
         </LinearLayout>
 
